<resources>
    <string name="app_name">UFMS App</string>
    <string name="action_settings">Settings</string>
    <string name="filter_event">Filtrar</string>
    <string name="search_event">Buscar</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="txt1">Welcome</string>
    <string name="txt2">Henrique</string>
    <string name="txt3">luizhsda@gmail.com</string>
    <string name="evento_first_item_content_description">Imagem de descrição do evento</string>
    <string name="txt_image_content_description">Imagem do usuário</string>
    <string name="txt_drawer_evento">Eventos</string>
    <string name="txt_drawer_disciplina">Disciplina</string>
    <string name="txt_drawer_notas">Notas</string>
    <string name="txt_drawer_curso">Curso</string>
    <string name="txt_drawer_config">Configuração</string>
    <string name="txt_drawer_ajuda">Ajuda &amp; feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_drawer_explore">Explore</string>
    <string name="txt_sobre">Sobre</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_card_title">Card Group Imagem</string>
    <string name="txt_content_description_evento">Imagem do evento</string>
    <string name="txt_description_disciplina">Imagem da disciplina</string>
    <string name="txt_content_description_no_connection">Ícone sem conexão com internet</string>
    <string name="txt_content_description_no_upload">Ícone Evento sem Anexo</string>
    <string name="txt_detalhe_evento">Detalhes do Evento</string>
    <string name="txt_sem_eventos_lista">Nenhum evento disponível</string>
    <string name="txt_sem_anexos_lista">Nenhum anexo disponível</string>
    <string name="txt_sem_disciplinas_lista">Suas disciplinas irão aparecer aqui</string>
    <string name="txt_no_connection_msg">Sem conexão com a Internet</string>
    <string name="txt_retry_connection">Tentar</string>
    <string name="txt_notificacao_eventos">Novo Evento Adicionado</string>
    <string name="txt_notificacao_disciplinas">Nova(s) Disciplina(s) Cadastrada(s)</string>
    <string name="txt_notificacao_notas">Nova(s) Nota(s) Adicionada(s)</string>
    <string name="gcm_nao_suportado">Aparelho não compatível com o GCM.</string>
    <string name="txt_search_hint">Buscar</string>
    <string name="txt_cd_detalhes_evento">Detalhes Evento Imagem</string>
    <string name="txt_disciplina_no_content">Nenhuma disciplina disponível</string>
    <string name="txt_notas_no_content">Suas notas irão aparecer aqui</string>
    <string name="txt_notas_not_available">Notas não disponíveis no momento</string>
    <string name="txt_explore_disciplina_ver">VER</string>
    <string name="txt_content_description_disciplina">Tipo de disciplina detalhes</string>
    <string name="txt_rating_count">Número de usuários rating</string>
    <string name="evento_details_evento">Evento</string>
    <string name="evento_details_disciplina">Disciplina</string>
    <string name="evento_details_anexo">Anexo(s)</string>
    <string name="evento_detail_deadline_icon">Data Limite Evento Icon</string>
    <string name="evento_detail_notification_title">Notificações</string>
    <string name="evento_detail_notification_disable">Desativar notificações para esta disciplina</string>
    <string name="txt_download_finalizado">Download finalizado.</string>
    <string name="txt_download_em_progresso">Download em progresso &#8230;</string>
    <string name="txt_download_error">"Download error: "</string>
    <string name="txt_dialog_msg">Deseja avaliar esta disciplina?</string>
    <string name="txt_dialog_msg_edit">Deseja editar sua avaliação?</string>
    <string name="txt_disciplina_rating_status">Você ainda não avaliou esta disciplina.</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_avaliar">Avaliar</string>
    <string name="txt_editar">Editar</string>
    <string name="txt_rated_success">Avaliação gravada com sucesso.</string>
    <string name="txt_rated_edit_success">Avaliação editada com sucesso.</string>
    <string name="txt_rated_not_allowed">Selecione uma nota diferente para a avaliação.</string>
    <string name="txt_content_description_avaliacao">Editar Avaliação da Disciplina</string>
    <string name="txt_no_upload">Nenhum anexo disponivel</string>
    <string name="txt_no_upload_available">Nenhum anexo disponível.</string>
    <string name="txt_no_student">Nenhum aluno matriculado.</string>
    <string name="txt_content_description_no_student">Ícone sem Aluno Cadastrado</string>
    <string name="txt_success_download_snack_bar">Download finalizado com sucesso.</string>
    <string name="txt_nota_icone_content_description">Ícone nota do usuário</string>
    <string name="nota_atividade_content_description">Ícone nota atividade</string>
    <string name="txt_no_disciplina_nota">Disciplinas com notas disponíveis vão aparecer aqui.</string>
    <string name="txt_atividade_empty">Suas notas irão aparecer aqui.</string>
    <string-array name="tabs">
        <item>Informações</item>
        <item>Alunos</item>
        <item>Materiais</item>
    </string-array>
    <string-array name="tabs_eventos">
        <item>Evento</item>
        <item>Anexos</item>
    </string-array>
    <string-array name="week_days">
        <item>Dom</item>
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
        <item>Sáb</item>
    </string-array>
    <string-array name="rating_desc_items">
        <item>Péssimo</item>
        <item>Não gostei</item>
        <item>Mais ou menos</item>
        <item>Bom</item>
        <item>Excelente</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (min 6 caracteres)</string>
    <string name="txt_create_account">Criar uma conta</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_content_description_logo_login">Logo do app tela de login</string>
    <string name="title_activity_registrar">RegistrarActivity</string>
    <string name="txt_hint_nome">Nome</string>
    <string name="txt_hint_rga">RGA</string>
    <string name="txt_button_registrar">Registrar</string>
    <string name="txt_button_go_to_login">Já possui conta? Entrar</string>
    <string name="txt_content_description_senha">Mostrar/Esconder senha</string>
    <string name="txt_foto_opt">Foto (opcional)</string>
    <string name="txt_download_file">Icone de baixar arquivo.</string>
    <string name="txt_open_document">Abrir</string>
    <string name="txt_mark_as_not_read">Marcar como não lido</string>
    <string name="txt_favorite">Favoritar</string>
    <string name="txt_busca">Buscar</string>
    <string name="txt_sobre_menu_config">Sobre</string>
    <string name="txt_send_feedback">Enviar Feedback</string>
    <string name="pref_notification_enable">pref_key_receber_notificacao</string>
    <string name="pref_notification_sound">pref_key_ativar_som_notificacao</string>
    <string name="pref_network_type">pref_key_download_network</string>
    <string name="pref_logout_app">pref_logout_app</string>
    <string name="txt_logout">Sair</string>
    <string name="txt_only_wifi">Baixar arquivos somente via Wi-Fi</string>
    <string name="txt_receive_notification">Receber notificações do aplicativo</string>
    <string name="txt_activate_sound">Ativar som da notificação</string>
    <string name="txt_enable_notifications">Ativar notificações</string>
    <string name="txt_pref_sound_summary_off">O som das notificações foram desativados</string>
    <string name="txt_pref_sound_summary_on">Você receberá alertas sonoros ao receber uma notificação</string>
    <string name="txt_category_notification">Notificações</string>
    <string name="txt_category_download">Download</string>
    <string name="txt_settings_activity">Configuracões</string>
    <string name="txt_wifi_only_snackbar">Você precisa estar conectado via WIFI</string>
    <string name="txt_login_invalido">Login Inválido</string>
    <string name="txt_invalid_registrar">Email ou RGA já existem</string>
    <string name="txt_registrar_error">Erro ao registrar usuário</string>
    <string name="txt_type_name">Por favor, digite seu nome</string>
    <string name="txt_registrar_type_email">Por favor, digite um email</string>
    <string name="txt_registrar_type_valid_email">Por favor, digite um email válido. Geralmente inclui um caractere \'@\'</string>
    <string name="txt_registrar_valid_rga">Por favor, digite um RGA válido com 12 dígitos</string>
    <string name="txt_registrar_type_password">Por favor, digite uma senha</string>
    <string name="txt_registrar_min_chars_password">Sua senha deve conter no mínimo 6 caracteres</string>
    <string name="txt_calendar_view">Ver calendário</string>
    <string name="txt_list_view">Ver lista de eventos</string>
    <string name="txt_pref_sobre">Sobre</string>
    <string name="pref_app_license">key_pref_license</string>
    <string name="pref_app_version">key_pref_version</string>
    <string name="txt_app_version">1.0.0</string>
    <string name="txt_app_license">Apache License Version 2.0</string>
    <string name="txt_app_license_title">Licença</string>
    <string name="txt_action_github">GitHub</string>
    <string name="title_activity_license">Licença</string>
    <string name="txt_feedback_subtitle">Nos ajude a aprimorar UFMS App enviando esta mensagem contando sua experiência ao usar nosso produto.</string>
    <string name="txt_feedback_title">Feedback do usuário</string>
    <string name="txt_content_description_feeback">Mensagem de feedback logo</string>
    <string name="email_feedback_input_hint">Digite o seu email</string>
    <string name="message_feedback_input_hint">Escreva sua mensagem de feedback</string>
    <string name="txt_detalhes_do_curso">Detalhes do Curso</string>
    <string name="txt_detalhes_curso_codigo">Código</string>
    <string name="txt_detalhes_curso_ch">Carga Horária</string>
    <string name="txt_detalhes_curso_periodo">Período</string>
    <string name="txt_detalhes_curso_area">Área</string>
    <string name="txt_detalhes_curso_exatas">Exatas</string>
    <string name="txt_detalhes_curso_integral">Integral</string>
    <string name="txt_detalhes_curso_horas">3060 horas</string>
    <string name="txt_detalhes_curso_codigo_desc">0570</string>
</resources>