<!--
  ~ Copyright [2016] [UFMS]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/txt_category_download">
        <CheckBoxPreference
            android:defaultValue="@bool/download_def_value"
            android:key="@string/pref_network_type"
            android:summary="@string/txt_only_wifi"
            android:title="Baixar anexos" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/txt_category_notification">

        <CheckBoxPreference
            android:defaultValue="@bool/notification_def_value"
            android:key="@string/pref_notification_enable"
            android:summary="@string/txt_receive_notification"
            android:title="@string/txt_enable_notifications" />

        <SwitchPreference
            android:defaultValue="@bool/sound_def_value"
            android:key="@string/pref_notification_sound"
            android:summaryOff="@string/txt_pref_sound_summary_off"
            android:summaryOn="@string/txt_pref_sound_summary_on"
            android:title="@string/txt_activate_sound" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/txt_pref_sobre">
        <Preference
            android:key="@string/pref_app_version"
            android:summary="@string/txt_app_version"
            android:title="Versão do aplicativo" />

        <Preference
            android:key="@string/pref_app_license"
            android:summary="@string/txt_app_license"
            android:title="@string/txt_app_license_title" />
    </PreferenceCategory>

    <Preference
        android:key="@string/pref_logout_app"
        android:title="@string/txt_logout" />
</PreferenceScreen>