<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright [2016] [UFMS]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_drawer_explore"
            android:checked="true"
            android:icon="@mipmap/ic_explore_black_24dp"
            android:title="@string/txt_drawer_explore" />

        <item
            android:id="@+id/nav_drawer_eventos"
            android:icon="@mipmap/ic_event_black_24dp"
            android:title="@string/txt_drawer_evento" />

        <item
            android:id="@+id/nav_drawer_disciplina"
            android:icon="@mipmap/ic_assignment_black_24dp"
            android:title="@string/txt_drawer_disciplina" />

        <item
            android:id="@+id/nav_drawer_notas"
            android:icon="@mipmap/ic_grade_black_24dp"
            android:title="@string/txt_drawer_notas" />

        <item
            android:id="@+id/nav_drawer_curso"
            android:icon="@mipmap/ic_class_black_24dp"
            android:title="@string/txt_drawer_curso" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_config"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/txt_drawer_config" />


    </group>

</menu>