<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ufms.br.com.ufmsapp.fragment.EventosFragment">

    <item
        android:id="@+id/search"
        android:icon="@mipmap/ic_search_white_24dp"
        android:title="@string/search_event"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_filter_event"
        android:icon="@mipmap/ic_filter_list_white_24dp"
        android:orderInCategory="100"
        android:title="@string/filter_event"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_calendar_view"
        android:orderInCategory="100"
        android:title="@string/txt_calendar_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_list_view"
        android:orderInCategory="100"
        android:title="@string/txt_list_view"
        app:showAsAction="never" />
</menu>
