<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="ufms.br.com.ufmsapp.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/txt_content_description_logo_login"
        android:src="@mipmap/ic_filter_list_white_48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress|textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/whiteTextColor"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/login_show_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/txt_content_description_senha"
                android:onClick="showHidePassword"
                android:scaleType="fitEnd"
                android:src="@mipmap/ic_visibility_white_18dp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/login_hide_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/txt_content_description_senha"
                android:onClick="showHidePassword"
                android:scaleType="fitEnd"
                android:src="@mipmap/ic_visibility_off_white_18dp"
                android:visibility="gone"
                tools:visibility="visible" />
        </RelativeLayout>


        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="userLogin"
            android:text="@string/txt_entrar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="userCreateAccount"
            android:text="@string/txt_create_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
